2007-12-21  Andrey Kiselv  <dron@ak4719.spb.edu>

	* PJ_wag3.c: Added missed "lat_ts" parameter to projection description
	string.

2007-12-20  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_list.h, Makefile.am, PJ_mpoly.c: Removed mpoly projection.  It
	was just a dummy (no actual transformation).

2007-12-06  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_factors.c: in the case of phi=90, the derived should be calculated
	at [90-delta,90] instead of at [90,90+delta] (the same is true for -90)
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1605
	
2007-12-03  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_transform.c: Small improvement in WGS84_ES precision to avoid
	an unnecessary trip through geocentric space (eg bug 1531).

2007-11-30  Frank Warmerdam  <warmerdam@pobox.com>

	* add latlon and lonlat as aliases.

2007-11-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.0beta1 release.

	* nad/epsg: Upgrade to EPSG 6.13

2007-11-25  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_transform.c: Do ellipsoid comparisons using the _orig ellipse
	values rather than the adjusted one.  Use these original values for
	any conversion to/from geocentric coordinates. 

	Also, only do pj_datum_transform if neither the source nor destination 
	is PJD_UNKNOWN.  This means we will no longer attempt via-geocentric 
	adjustments for coordinate systems lacking a datum definition (having 
	only an ellipsoid.

	* projects.h, pj_init.c: added a_orig and es_orig values in the PJ
	structure so we can distinguish between the originally requested 
	ellipsoid, and the ellipsoid after adjustment for spherical projections

	Todays changes courtesy of bug 1602. 

2007-09-28  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri.extra: Add "900913" code for google mercator.

2007-09-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/gencent.c/h, src/pj_transform.c: Restructure so geocentric code
	does not use static variables - reentrancy fix.
