@@ -20,7 +20,7 @@ geod_LDADD = libproj.la
 
 lib_LTLIBRARIES = libproj.la
 
-libproj_la_LDFLAGS = -version-info 5:3:5
+libproj_la_LDFLAGS = -version-info 5:4:5
 
 libproj_la_SOURCES = \
 	projects.h pj_list.h \
